--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,7 +11,7 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - -s -w -X github.com/coderstone/ghist/cmd.Version={{.Version}}
+      - -s -w -X github.com/unnecessary-special-projects/ghist/cmd.Version={{.Version}}
 
 archives:
   - format: tar.gz
@@ -22,3 +22,17 @@ archives:
 
 checksum:
   name_template: "checksums.txt"
+
+brews:
+  - name: ghist
+    repository:
+      owner: unnecessary-special-projects
+      name: homebrew-tap
+      token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
+    homepage: "https://github.com/unnecessary-special-projects/ghist"
+    description: "Task management that lives in your repo."
+    license: "MIT"
+    install: |
+      bin.install "ghist"
+    test: |
+      system "#{bin}/ghist", "--version"
